web/src/styles/utility.scss
// -----------------------------------------------------------------------------
@import "variables";
@import "mixins"; 
// -----------------------------------------------------------------------------

.text-normal {
  text-transform: none !important;
}

.tablet-hide-bg {
  @include screen-md {
    background-image: none
  }
}

.mobile-hide-bg {
  @include screen-xs {
    background-image: none
  }

  @include screen-sm {
    background-image: none
  }
}

.double-border--brand {
  position: relative;
  border-right: 2px $brand-color solid;
    border-left: 2px $brand-color solid;
  &:before {
    content: "";
    position: absolute;
    top: 0px;
    left: 5px;
    right: 5px;
    bottom: 0px;
    border-right: 2px $brand-color solid;
    border-left: 2px $brand-color solid;
  }
}

.parallax {
  background-attachment: fixed;
}
$image-path: '/static/awesome-inc-space-banner-ae4a4687dceb6d81adbae43de6c2a774.jpg';
$bg-filter-blur: blur(2px) grayscale(0.8);
.bg-filter-mute {
  background-image: url($image-path);
  background-size: cover;
  overflow: auto;
  position: relative;
  z-index: 2; //-2 was making links unclickable, 2 gives the same effect and makes links work
  &:before {
    content: "";
    position: absolute;
    width : 100%;
    height: 100%;
    background: inherit;
    z-index: -1;
    background: rgba(150, 150, 150, 0.45);
    
    filter        : $bg-filter-blur;
    -moz-filter   : $bg-filter-blur;
    -webkit-filter: $bg-filter-blur;
    -o-filter     : $bg-filter-blur;
  }
}

.bg--dark-grey {
  background-color: $brand-color2;
}

.bg--brand-color {
  background-color: $brand-color;
}
.bg--brand-light {
  background-color: $brand-light;
}

.border-right--white {
  border-right: 2px solid #fff;
}

.border-right--brand {
  border-right: 2px solid $brand-color;
}

